--- a/app/views/essentials/_accordianload.html.erb
+++ b/app/views/essentials/_accordianload.html.erb
@@ -30,7 +30,7 @@
 
 
   <div id="sidebar-wrapper">
-   <ul class="sidebar-nav" id ="filters">
+   <ul class="sidebar-nav col-xs-12 hidden-xs" id ="filters">
 
 
 <%= label_tag(:pricebox, "Price Per Night") %>
