adding_secondpage_filter
adding_secondpage_filter

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -81,3 +81,10 @@ body.loading {
 body.loading .modal2 {
     display: block;
 }
+
+a,a:hover,a:click, a:visited{
+  border:none;
+  outline:none;
+  text-decoration:none;
+  color:inherit;
+}
