--- a/app/views/essentials/_accordianload.html.erb
+++ b/app/views/essentials/_accordianload.html.erb
@@ -2,7 +2,17 @@
 
 
 
+<style>
+a,a:hover,a:click, a:visited{
+  border:none;
+  outline:none;
+  text-decoration:none;
+  color:inherit;
+}
 
+
+
+</style>
 
 
 
@@ -311,16 +321,6 @@
 
 
 
-
-        <div class="panel-group col-md-8 col-md-offset-2 column" id="resultsform"><a
-
-          href="/">Return to Search</a>
-
-
-
-        </div>
-
-
 <div id="sortfilter">
 <%number = [['5',4],['10',9],['15',14],['25',24],['50',49]]%>
 <div class="panel-group col-md-4 col-md-offset-2 column">
@@ -455,7 +455,7 @@ zebra| zebra["RoomRateDetailsList"]["RoomRateDetails"]["RateInfos"]["RateInfo"][
 
  <%if noresults==1 then%>
     <div class="panel-group col-md-8 col-md-offset-2 column" id="accordion" role="tablist" aria-multiselectable="true">
-    No Results Available
+  Unfortunately, no hotels meet your search criteria.  Please remove filters to broaden your search.
     </div>
     <%end%>
 
@@ -528,11 +528,11 @@ zebra| zebra["RoomRateDetailsList"]["RoomRateDetails"]["RateInfos"]["RateInfo"][
 
 
 
-<form id="accordion<%=counter%>" action="/essentials/hoteldetails" method="post" >
+<form id="accordion<%=counter%>" action="/essentials/hoteldetails" method="post">
 
 
 
-  <a href="javascript:{}" onclick="document.getElementById('accordion<%=counter%>').submit();waitingDialog.show('Searching for Rooms...');setTimeout(function () {waitingDialog.hide();}, 30000);ga('send', 'event','Rooms', 'Click', 'Rooms'); return false;" style="color:black">
+  <a id="triplink1" style="text-decoration:none;color:black" href="javascript:{}" onclick="document.getElementById('accordion<%=counter%>').submit();waitingDialog.show('Searching for Rooms...');setTimeout(function () {waitingDialog.hide();}, 30000);ga('send', 'event','Rooms', 'Click', 'Rooms'); return false;" style="color:black">
 
 
 
@@ -547,12 +547,13 @@ zebra| zebra["RoomRateDetailsList"]["RoomRateDetails"]["RateInfos"]["RateInfo"][
 
 
           <div class="media">
-            <div class="media-left media-middle col-xs-12">
+
+            <div class="media-left col-xs-12">
+
              <span class="price col-xs-12">$<%= zebra["RoomRateDetailsList"]["RoomRateDetails"]["RateInfos"]["RateInfo"]["ChargeableRateInfo"]["@averageRate"].to_i.round(0)%><span class="pricesmall"> rate per night</span></span>
 
 
              <div class="media-left"><img class="media-object" src="http://media.expedia.com<%= zebra["thumbNailUrl"].sub("_t","_d")%>">  </div>
-
 
 
              <div class="media-body" style="padding-bottom:0px">
@@ -561,16 +562,33 @@ zebra| zebra["RoomRateDetailsList"]["RoomRateDetails"]["RateInfos"]["RateInfo"][
               <h4 class="media-heading"><dt><%= zebra["name"].html_safe%> </dt></h4>
 
 
+
               <dd><%= zebra["city"]%></dd>
+              <dd><%= zebra["rank"]%></dd>
+              <img src="<%=zebra['rating_image_url']%>">
+
+                <a class="triplink" href="<%= zebra["web_url"] %>" onclick="window.open(this.href); return false;" onkeypress="window.open(this.href); return false;">Based on <%= zebra["num_reviews"].to_i %> reviews</a>
 
 
-              <%zebra["locationDescription"].gsub! '&gt;','>'%>
+                <%if zebra["reviews"] == nil then else%>
+<dd>
+                         <%zebra["reviews"].each do |rating|%>
+
+                          "<%=rating["title"]%>"
+
+                           <%end%>
+  </dd>
+                 <%end%>
+
+
+
+             <!-- <%zebra["locationDescription"].gsub! '&gt;','>'%>
               <%zebra["locationDescription"].gsub! '&lt;','<'%>
 
 
 
               <dd><%= zebra["locationDescription"].html_safe%></dd>
-              <dd ><%= zebra["hotelRating"]%>
+              <dd ><%= zebra["hotelRating"]%>  !-->
 
                 <dd ><%= if zebra["supplierType"] != "E" then "Online Only!" end%></dd>
 
@@ -664,11 +682,20 @@ zebra| zebra["RoomRateDetailsList"]["RoomRateDetails"]["RateInfos"]["RateInfo"][
                               <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
                                       <input value ="<%=@checkin%>" name="checkin" id="checkin" type="hidden">
                                       <input value ="<%=@checkout%>" name="checkout" id="checkout" type="hidden">
-                                      <input value ="<%=@adults%>" name="adults" type="hidden">
-                                      <input value ="<%=@children%>" name="children" type="hidden">
-                                      <input value ="<%=@age1%>" name="age1" type="hidden">
-                                      <input value ="<%=@age2%>" name="age2" type="hidden">
-                                      <input value ="<%=@age3%>" name="age3" type="hidden">
+
+                                      <input value ="<%=@counter%>" name="counter" id="counter" type="hidden">
+                                      <input value ="<%=@adults%>" name="adults" id="adults" type="hidden">
+                                      <input value ="<%=@children%>" name="children" id="children" type="hidden">
+                                      <input value ="<%=@age1%>" name="age1" id = "age1" type="hidden">
+                                      <input value ="<%=@age2%>" name="age2" id="age2" type="hidden">
+                                      <input value ="<%=@age3%>" name="age3" id="age3" type="hidden">
+                                      <input value ="<%=@region%>" name="region" id="region" type="hidden">
+                                      <input value ="<%=@chain%>" name="brand" id="brand" type="hidden">
+                                      <input value ="<%=@hoteltype%>" name="hoteltype" id="hoteltype" type="hidden">
+                                      <input value ="<%=@temp%>" name="temp" id="temp" type="hidden">
+                                      <input value ="<%=@stars%>" name="stars" id="stars" type="hidden">
+
+
                                       <input value ="<%=@coordarray%>" name="coordarray" id="coordarray" type="hidden">
                                       <input value ="<%=@centerlat%>" name="centerlat" id="centerlat" type="hidden">
                                       <input value ="<%=@centerlong%>" name="centerlong" id="centerlong" type="hidden">
@@ -681,6 +708,9 @@ zebra| zebra["RoomRateDetailsList"]["RoomRateDetails"]["RateInfos"]["RateInfo"][
                                       <input value ="<%=@priced%>" name="@priced" id="@priced" type="hidden">
                                       <input value ="<%=@pricee%>" name="@pricee" id="@pricee" type="hidden">
                                       <input value ="<%=@pricef%>" name="@pricef" id="@pricef" type="hidden">
+                                       <input value ="<%=@pricerange%>" name="@pricerange" id="@pricerange" type="hidden">
+                                         <input value ="<%=@pricerange%>" name="pricerange" id="pricerange" type="hidden">
+                                          <input value ="<%=@pricerange%>" name="ex2" id="ex2" type="hidden">
                                       <input value ="<%=@whotels%>" name="@whotels" id="@whotels" type="hidden">
                                       <input value ="<%=@hyatt%>" name="@hyatt" id="@hyatt" type="hidden">
                                       <input value ="<%=@waldorf%>" name="@waldorf" id="@waldorf" type="hidden">
@@ -780,11 +810,20 @@ zebra| zebra["RoomRateDetailsList"]["RoomRateDetails"]["RateInfos"]["RateInfo"][
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
                                       <input value ="<%=@checkin%>" name="checkin" id="checkin" type="hidden">
                                       <input value ="<%=@checkout%>" name="checkout" id="checkout" type="hidden">
-                                      <input value ="<%=@adults%>" name="adults" type="hidden">
-                                      <input value ="<%=@children%>" name="children" type="hidden">
-                                      <input value ="<%=@age1%>" name="age1" type="hidden">
-                                      <input value ="<%=@age2%>" name="age2" type="hidden">
-                                      <input value ="<%=@age3%>" name="age3" type="hidden">
+
+                          <input value ="<%=@adults%>" name="adults" id="adults" type="hidden">
+                                      <input value ="<%=@children%>" name="children" id="children" type="hidden">
+                                      <input value ="<%=@age1%>" name="age1" id = "age1" type="hidden">
+                                      <input value ="<%=@age2%>" name="age2" id="age2" type="hidden">
+                                      <input value ="<%=@age3%>" name="age3" id="age3" type="hidden">
+                                      <input value ="<%=@region%>" name="region" id="region" type="hidden">
+                                      <input value ="<%=@chain%>" name="brand" id="brand" type="hidden">
+                                      <input value ="<%=@hoteltype%>" name="hoteltype" id="hoteltype" type="hidden">
+                                      <input value ="<%=@temp%>" name="temp" id="temp" type="hidden">
+                                      <input value ="<%=@stars%>" name="stars" id="stars" type="hidden">
+                                     <input value ="<%=@counter%>" name="counter" id="counter" type="hidden">
+
+
                                       <input value ="<%=@coordarray%>" name="coordarray" id="coordarray" type="hidden">
                                       <input value ="<%=@sorting%>" name="sorting" id="sorting" type="hidden">
 
@@ -799,6 +838,11 @@ zebra| zebra["RoomRateDetailsList"]["RoomRateDetails"]["RateInfos"]["RateInfo"][
                                       <input value ="<%=@priced%>" name="@priced" id="@priced" type="hidden">
                                       <input value ="<%=@pricee%>" name="@pricee" id="@pricee" type="hidden">
                                       <input value ="<%=@pricef%>" name="@pricef" id="@pricef" type="hidden">
+                                      <input value ="<%=@pricerange%>" name="@pricerange" id="@pricerange" type="hidden">
+                                         <input value ="<%=@pricerange%>" name="pricerange" id="pricerange" type="hidden">
+                                          <input value ="<%=@pricerange%>" name="ex2" id="ex2" type="hidden">
+
+
                                       <input value ="<%=@whotels%>" name="@whotels" id="@whotels" type="hidden">
                                       <input value ="<%=@hyatt%>" name="@hyatt" id="@hyatt" type="hidden">
                                       <input value ="<%=@waldorf%>" name="@waldorf" id="@waldorf" type="hidden">
@@ -834,6 +878,9 @@ zebra| zebra["RoomRateDetailsList"]["RoomRateDetails"]["RateInfos"]["RateInfo"][
 
 
 <script>
+
+$(".triplink").click(function(){ return false; });
+
 
 $("#sortfilter").change(function(){
 
@@ -886,7 +933,7 @@ $("#filters").change();
     var langham = document.getElementById('langham').checked;
     var peninsula = document.getElementById('peninsula').checked;
     var sorting = document.getElementById('sorting').value;
-
+    var counter = document.getElementById('counter').value;
 
 
 var brandstring =[]
@@ -923,7 +970,7 @@ var brandstring =[]
       type: 'POST',
       url: url,
       dataType:'script',
-      data: {hotelhash: JSON.stringify(hotelhash),get_latlong:get_latlong,checkin:checkin,checkout:checkout,filterresults:numresults,pricea:pricea,priceb:priceb,pricec:pricec,priced:priced,pricee:pricee,pricef:pricef,firstformtoggle:firstformtoggle,brandstring:brandstring,chainid:chainid,whotels:whotels,hyatt:hyatt,waldorf:waldorf,fourseasons:fourseasons,hilton:hilton,radissonblu:radissonblu,renaissance:renaissance,sheraton:sheraton,stregis:stregis,westin:westin,boscolo:boscolo,renaissance:renaissance,fairmont:fairmont,intercontinental:intercontinental,jwmarriott:jwmarriott,lemeridian:lemeridian,mandarin:mandarin,marriott:marriott,melia:melia,shangra:shangra,sofitel:sofitel,starwoodlux:starwoodlux,langham:langham,peninsula:peninsula,coordarray:coordarray,centerlat:centerlat,centerlong:centerlong,sorting:sorting}
+      data: {hotelhash: JSON.stringify(hotelhash),get_latlong:get_latlong,checkin:checkin,checkout:checkout,filterresults:numresults,pricea:pricea,priceb:priceb,pricec:pricec,priced:priced,pricee:pricee,pricef:pricef,firstformtoggle:firstformtoggle,brandstring:brandstring,chainid:chainid,whotels:whotels,hyatt:hyatt,waldorf:waldorf,fourseasons:fourseasons,hilton:hilton,radissonblu:radissonblu,renaissance:renaissance,sheraton:sheraton,stregis:stregis,westin:westin,boscolo:boscolo,renaissance:renaissance,fairmont:fairmont,intercontinental:intercontinental,jwmarriott:jwmarriott,lemeridian:lemeridian,mandarin:mandarin,marriott:marriott,melia:melia,shangra:shangra,sofitel:sofitel,starwoodlux:starwoodlux,langham:langham,peninsula:peninsula,coordarray:coordarray,centerlat:centerlat,centerlong:centerlong,sorting:sorting,counter:counter}
     });
 });
 
